# resume

./: .gitignore  Cargo.toml  Trunk.toml  deploy.sh  index.html  package.json
.github/workflows/: deploy_gh.yml
assets/css/: style.css
src/: lib.rs
src/components/: about_view.rs  contact_view.rs  mod.rs  not_found_view.rs  privacy_view.rs  projects_view.rs  resume_view.rs  sidebar.rs  terms_view.rs
src/data/: mod.rs
src/datafile/: about.json  privacy.json  profile.json  projects.json  resume.json  terms.json
